--- a/front-end/package.json
+++ b/front-end/package.json
@@ -40,6 +40,7 @@
     "ionicons": "^6.0.3",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
+    "ng2-search-filter": "^0.5.1",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
     "swiper": "^9.1.0",
