--- a/front-end/package.json
+++ b/front-end/package.json
@@ -33,6 +33,7 @@
     "@capacitor/share": "^4.1.1",
     "@capacitor/status-bar": "^4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/storage-angular": "^3.0.6",
     "angularx-qrcode": "^15.0.1",
     "cordova-plugin-nativegeocoder": "^3.5.1",
     "date-fns": "^2.29.3",
