--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gym-access",
+  "name": "gym access",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
