--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/core": "^6.3.0",
+    "@awesome-cordova-plugins/email-composer": "^6.3.0",
     "@awesome-cordova-plugins/native-geocoder": "^6.3.0",
     "@capacitor-community/barcode-scanner": "^3.0.1",
     "@capacitor/android": "4.7.0",
@@ -35,6 +37,7 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
     "angularx-qrcode": "^15.0.1",
+    "cordova-plugin-email-composer": "^0.10.1",
     "cordova-plugin-nativegeocoder": "^3.5.1",
     "date-fns": "^2.29.3",
     "html-to-pdfmake": "^2.4.16",
