--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^2.29.3",
     "html-to-pdfmake": "^2.4.16",
     "ionicons": "^6.0.3",
+    "jetifier": "^2.0.0",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "ng2-search-filter": "^0.5.1",
