--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,7 +25,7 @@
     "@capacitor-community/barcode-scanner": "^3.0.1",
     "@capacitor/android": "4.7.0",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.0",
+    "@capacitor/core": "^4.7.0",
     "@capacitor/geolocation": "^4.1.0",
     "@capacitor/google-maps": "^4.5.0",
     "@capacitor/haptics": "4.1.0",
@@ -39,12 +39,10 @@
     "angularx-qrcode": "^15.0.1",
     "cordova-plugin-email-composer": "^0.10.1",
     "cordova-plugin-nativegeocoder": "^3.5.1",
-    "date-fns": "^2.29.3",
+    "date-fns": "2.30.0",
     "html-to-pdfmake": "^2.4.16",
     "ionicons": "^6.0.3",
-    "jetifier": "^2.0.0",
     "jspdf": "^2.5.1",
-    "moment": "^2.29.4",
     "ng2-search-filter": "^0.5.1",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
@@ -64,7 +62,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
     "@capacitor/cli": "4.7.0",
-    "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
