--- a/front-end/android/app/build.gradle
+++ b/front-end/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    namespace "com.jenixindia.gymaccess"
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "com.jenixindia.gymaccess"
