--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,17 +23,17 @@
     "@awesome-cordova-plugins/email-composer": "^6.3.0",
     "@awesome-cordova-plugins/native-geocoder": "^6.3.0",
     "@capacitor-community/barcode-scanner": "^3.0.1",
-    "@capacitor/android": "4.7.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "^4.7.0",
-    "@capacitor/geolocation": "^4.1.0",
-    "@capacitor/google-maps": "^4.5.0",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/ios": "4.7.0",
-    "@capacitor/keyboard": "4.1.1",
-    "@capacitor/push-notifications": "^4.1.2",
-    "@capacitor/share": "^4.1.1",
-    "@capacitor/status-bar": "^4.1.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.0",
+    "@capacitor/google-maps": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/share": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
     "angularx-qrcode": "^15.0.1",
@@ -61,7 +61,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.7.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
