--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "@capacitor/android": "^5.0.4",
     "@capacitor/app": "^5.0.2",
     "@capacitor/core": "^5.0.4",
+    "@capacitor/filesystem": "^5.0.4",
     "@capacitor/geolocation": "^5.0.2",
     "@capacitor/google-maps": "^5.1.0",
     "@capacitor/haptics": "^5.0.2",
@@ -41,7 +42,9 @@
     "cordova-plugin-email-composer": "^0.10.1",
     "cordova-plugin-nativegeocoder": "^3.5.1",
     "date-fns": "2.30.0",
+    "html-to-image": "^1.11.11",
     "html-to-pdfmake": "^2.4.20",
+    "html2canvas": "^1.4.1",
     "ionicons": "^7.1.1",
     "jspdf": "^2.5.1",
     "ng2-search-filter": "^0.5.1",
