--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gym access",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "jenix",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -36,6 +36,7 @@
     "@capacitor/push-notifications": "^5.0.2",
     "@capacitor/share": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.0.9",
     "@ionic/storage-angular": "^4.0.0",
     "angularx-qrcode": "^16.0.0",
@@ -86,5 +87,5 @@
     "ts-node": "~10.9.1",
     "typescript": "~5.0.4"
   },
-  "description": "An Ionic project"
+  "description": "QR code scanning based Access Control Application "
 }
