--- a/front-end/android/capacitor.settings.gradle
+++ b/front-end/android/capacitor.settings.gradle
@@ -8,6 +8,9 @@ project(':capacitor-community-barcode-scanner').projectDir = new File('../node_m
 include ':capacitor-app'
 project(':capacitor-app').projectDir = new File('../node_modules/@capacitor/app/android')
 
+include ':capacitor-filesystem'
+project(':capacitor-filesystem').projectDir = new File('../node_modules/@capacitor/filesystem/android')
+
 include ':capacitor-geolocation'
 project(':capacitor-geolocation').projectDir = new File('../node_modules/@capacitor/geolocation/android')
 
