--- a/front-end/package.json
+++ b/front-end/package.json
@@ -66,6 +66,7 @@
     "@angular/compiler": "^16.0.3",
     "@angular/compiler-cli": "^16.0.3",
     "@angular/language-service": "^16.0.3",
+    "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "^5.0.4",
     "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.3.2",
