--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "@awesome-cordova-plugins/core": "^6.3.0",
     "@awesome-cordova-plugins/email-composer": "^6.3.0",
     "@awesome-cordova-plugins/native-geocoder": "^6.3.0",
+    "@awesome-cordova-plugins/network-interface": "^6.4.0",
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor/android": "^5.0.4",
     "@capacitor/app": "^5.0.2",
@@ -33,15 +34,19 @@
     "@capacitor/ios": "^5.0.4",
     "@capacitor/keyboard": "^5.0.2",
     "@capacitor/local-notifications": "^5.0.2",
+    "@capacitor/network": "^5.0.6",
     "@capacitor/push-notifications": "^5.0.2",
     "@capacitor/share": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/network-interface": "^5.36.0",
     "@ionic/angular": "^7.0.9",
     "@ionic/storage-angular": "^4.0.0",
+    "@ngneat/until-destroy": "^10.0.0-beta.0",
     "angularx-qrcode": "^16.0.0",
     "cordova-plugin-email-composer": "^0.10.1",
     "cordova-plugin-nativegeocoder": "^3.5.1",
+    "cordova-plugin-networkinterface": "^2.2.0",
     "date-fns": "2.30.0",
     "html-to-image": "^1.11.11",
     "html-to-pdfmake": "^2.4.20",
