--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "^16.0.3",
     "@awesome-cordova-plugins/core": "^6.3.0",
     "@awesome-cordova-plugins/email-composer": "^6.3.0",
+    "@awesome-cordova-plugins/in-app-browser": "^6.4.0",
     "@awesome-cordova-plugins/native-geocoder": "^6.3.0",
     "@awesome-cordova-plugins/network-interface": "^6.4.0",
     "@capacitor-community/barcode-scanner": "^4.0.1",
+    "@capacitor-community/native-market": "^5.0.0",
     "@capacitor/android": "^5.0.4",
     "@capacitor/app": "^5.0.2",
     "@capacitor/core": "^5.0.4",
@@ -45,6 +47,7 @@
     "@ngneat/until-destroy": "^10.0.0-beta.0",
     "angularx-qrcode": "^16.0.0",
     "cordova-plugin-email-composer": "^0.10.1",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-nativegeocoder": "^3.5.1",
     "cordova-plugin-networkinterface": "^2.2.0",
     "date-fns": "2.30.0",
