--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,6 +39,7 @@
     "@capacitor/network": "^5.0.6",
     "@capacitor/push-notifications": "^5.0.2",
     "@capacitor/share": "^5.0.2",
+    "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.2",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/network-interface": "^5.36.0",
