--- a/front-end/android/app/capacitor.build.gradle
+++ b/front-end/android/app/capacitor.build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation project(':capacitor-network')
     implementation project(':capacitor-push-notifications')
     implementation project(':capacitor-share')
+    implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
 
 }
