--- a/front-end/android/app/build.gradle
+++ b/front-end/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.jenixindia.gymaccess"
+    namespace "com.jenixindia.qrunlock"
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.jenixindia.gymaccess"
+        applicationId "com.jenixindia.qrunlock"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
