--- a/front-end/android/app/capacitor.build.gradle
+++ b/front-end/android/app/capacitor.build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation project(':capacitor-share')
     implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
+    implementation project(':codetrix-studio-capacitor-google-auth')
 
 }
 
