--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gym access",
+  "name": "qrunlock",
   "version": "0.0.1",
   "author": "jenix",
   "homepage": "https://ionicframework.com/",
@@ -41,6 +41,7 @@
     "@capacitor/share": "^5.0.2",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.2",
+    "@codetrix-studio/capacitor-google-auth": "^3.3.2",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/network-interface": "^5.36.0",
     "@ionic/angular": "^7.0.9",
