--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.3",
     "@angular/platform-browser-dynamic": "^16.0.3",
     "@angular/router": "^16.0.3",
+    "@awesome-cordova-plugins/app-version": "^6.4.0",
     "@awesome-cordova-plugins/core": "^6.3.0",
     "@awesome-cordova-plugins/email-composer": "^6.3.0",
     "@awesome-cordova-plugins/in-app-browser": "^6.4.0",
@@ -41,6 +42,7 @@
     "@capacitor/share": "^5.0.2",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.2",
+    "@capawesome/capacitor-app-update": "^5.0.1",
     "@codetrix-studio/capacitor-google-auth": "^3.3.2",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/network-interface": "^5.36.0",
@@ -48,6 +50,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "@ngneat/until-destroy": "^10.0.0-beta.0",
     "angularx-qrcode": "^16.0.0",
+    "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-email-composer": "^0.10.1",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-nativegeocoder": "^3.5.1",
