--- a/front-end/package.json
+++ b/front-end/package.json
@@ -61,6 +61,7 @@
     "html2canvas": "^1.4.1",
     "ionicons": "^7.1.1",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^3.1.2",
     "ng2-search-filter": "^0.5.1",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.8.1",
